# idutils

./: .gitmodules  NEWS  README-hacking  bootstrap.conf  cfg.mk  configure.ac
doc/: idutils.texi
lib/: Makefile.am
libidu/: dynvec.c  dynvec.h  fnprint.c  idfile.c  idfile.h  idread.c  idu-hash.c  idu-hash.h  iduglobal.h  idwrite.c  scanners.c  scanners.h  tokflags.h  walker.c  xnls.h
lisp/: idutils.el
src/: Makefile.am  fid.c  fnid.c  lid.c  mkid.c  xtokid.c
testsuite/: Coreutils.pm  CuSkip.pm  CuTmpdir.pm  check.mk  consistency  envvar-check  files0-from  help-version  infloop-kawa-el  lid-radix  lid-range  shell-or-perl
